crates/jsonschema-codegen/tests/ui/generic_struct.rs
#[jsonschema::validator(schema = r#"{"type":"string"}"#)]
struct Validator<T>(std::marker::PhantomData<T>);

fn main() {}
